--- a/projects/amz-eg-node/views/includes/index-header.ejs
+++ b/projects/amz-eg-node/views/includes/index-header.ejs
@@ -14,7 +14,56 @@
 
                 <ul class="main-navigation__List-2">
                     <li class="main-navigation__List-2-link not_mobile"><a href="">Language</a></li>
-                    <li class="main-navigation__List-2-link"><a href="">Login</a></li>
+                    <li class="main-navigation__List-2-link">
+                        <a href="">Login</a>
+                        <span id="login-link--hover-menu">
+                            <div class="login-link--hover-menu--section1">
+                                <ul class="login-link--hover-menu--section--buy-again">
+                                    <li class="hover-menu__item--header">
+                                        <h4>Buy it Again</h4>
+                                        <a href="">View All & Manage</a></li>
+                                    <li>
+                                        <div class="hover-menu__item-container">
+                                            <div class="hover-menu__item-container--image-container">
+                                                <img src="./img/product-image.jpg">
+                                            </div>
+                                            <div class="hover-menu__item-container--info-container">
+                                                <a href="">Zeina asdasd wqeqweqwe adasdasd</a>
+                                                <p class="">EGP 78.00</p>
+                                                <button class="yellow-button">Add to Cart</button>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="login-link--hover-menu--section2">
+                                <ul>
+                                    <li><h4>Your Lists</h4></li>
+                                    <li><a href="">Favorites</a></li>
+                                    <li><a href="">Create a List</a></li>
+
+                                </ul>
+
+                            </div>
+                            <div class="login-link--hover-menu--section3">
+                                <ul>
+                                    <li>
+                                        <h4>Your Account</h4>
+                                        <span class="mobile-menu-close--container">
+                                            <button class="mobile-menu-close">x</button>
+                                        </span>
+                                    </li>
+                                    <li><a href="./index.html">Your Products on Sale</a></li>
+                                    <li><a href="./index-add-product.html">Add a Product</a></li>
+                                    <li><a href="./index-orders.html">Your Orders</a></li>
+                                    <li><a href="">Logout</a></li>
+
+                                </ul>
+
+                            </div>
+
+                        </span>
+                    </li>
                     <li class="main-navigation__List-2-link not_mobile"><a href="">Orders</a></li>
                     <li class="main-navigation__List-2-link-small"><a href="">Cart</a></li>
                 </ul>
