--- a/projects/amz-eg-node/public/css/admin-products.css
+++ b/projects/amz-eg-node/public/css/admin-products.css
@@ -73,13 +73,21 @@ main {
 .main__main__products-list--text {
     color: var(--product-list-text);
     font-size: 0.8rem;
-    margin-right: auto;
+    /* margin-right: auto; */
     margin-top: 1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     
 }
 
 .main__main__products-list--text--header {
     display: none;
+}
+
+.main__main__products-list--text p {
+    margin-right: auto;
 }
 
 /*///////////////////////////////*/
@@ -200,8 +208,14 @@ main {
 }
 
 
-.main__main__products-list--item--description-buttons {
+.main__main__products-list--item--description-buttons button{
+    padding: 0.1em 0.6em 0.15em 0.5em;
+    border: 0;
+    border-radius: 2px;
+    border: 1px solid var(--button-white-border);
 
+
+    font-size: 0.8em;
 
 }
 
@@ -219,6 +233,24 @@ main {
 
 
 }
+
+.white-button {
+    /* border-radius: 7px; */
+    background-color: var(--button-white);
+    border: 1px solid var(--button-white-border);
+    font-weight: 400;
+    box-shadow:  0 0px 2px 0 rgba(213,217,217,.5);
+    color: var(--sort-button-text);
+    text-decoration: none;
+
+}
+
+.white-button:hover {
+    background-color: var(--button-white-hover);
+    border: 1px solid var(--button-white-hover-border);
+
+}
+
 
 
 .main__main__products-list--item--description-buttons-edit {
@@ -281,6 +313,40 @@ main {
 
 
     
+    
+.main__main__products-list--text--content-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
+.add-new-product-link {
+    height: 1.75rem;
+    border-radius: 7px;
+    border: 1px;
+    border-color: var(--button-yellow2);
+    background-color: var(--button-yellow2);
+    font-weight: 400;
+    box-shadow: 2px 2px 4px 1px rgba(245, 245, 245, 0.5);
+    /* margin-bottom: 1rem; */
+    width: 100%;
+    max-width: 250px;
+    margin: 0 auto;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.add-new-product-link:focus, .add-new-product-link:hover {
+    background-color: var(--button-yellow-hover);
+    border: 1px solid var(--button-yellow-hover-border);
+    cursor: pointer;
+
+}
+
 
 
 @media only screen and (min-width: 400px) { 
@@ -323,7 +389,20 @@ main {
 }
 
 
+
+
+
 @media only screen and (min-width: 550px) {
+
+    .main__main__products-list--text--content-wrapper {
+ 
+        flex-direction: row;
+    }
+
+    .add-new-product-link {
+        margin: 0;
+        margin-right: 1rem;
+    }
 
     .main__main__products-list--item {
         max-height: 20rem;
@@ -440,6 +519,7 @@ main {
         color: black;
     }
 
+
     .main__main__content {
         display: flex;
         flex-direction: row;
@@ -494,7 +574,5 @@ main {
         color: var(--side-cat-grey2);
     }
     
-
-
-
 }
+
