--- a/projects/amz-eg-node/public/css/login_style.css
+++ b/projects/amz-eg-node/public/css/login_style.css
@@ -16,7 +16,7 @@ input[type="checkbox"], input[type="radio"] {
     max-width: 450px;
     min-width: 335px;
 
-    margin-left:  auto;
+    margin: 0 auto;
 
     
 }
