Allow category sections to be viewed depending on the selected department

--- a/projects/amz-eg/css/add-product_style.css
+++ b/projects/amz-eg/css/add-product_style.css
@@ -116,6 +116,10 @@ input[type="checkbox"], input[type="radio"] {
 
 }
 
+#productSection_Electronics, #productSection_Clothing {
+    display: none;
+}
+
 .input-field-container--size {
     display: flex;
     flex-direction: column;
